--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-  "presets": ["es2015", "stage-0"]
+  "ignore": [
+    "node_modules/**/*"
+  ],
+  "presets": [
+    "es2015",
+    "stage-0"
+  ],
+  "plugins": [
+    "transform-runtime"
+  ]
 }
